# pvr.rtlradio

./: CMakeLists.txt
cmake/: Findlibusb-1.0.cmake
depends/common/libusb/: CMakeLists.txt
depends/common/rtl-sdr/: 0003-fix-library-export.patch  flags.txt
depends/common/sqlite3/: 0001-no-exe.patch
depends/windows/libusb/: CMakeLists.txt  libusb.txt
depends/windows/rtl-sdr/: flags.txt
